# acpf-bot

./: README.md  prompts.js  pyproject.toml  questions.md  requirements.txt
assets/: .gitkeep
src/: __init__.py  config.py  main.py
src/handlers/: commands.py  diagnosis.py  recommendation.py  registration.py  start.py
src/i18n/: __init__.py  messages.py
src/keyboards/: buttons.py
src/services/: notifications.py  sheets.py
